--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ position:fixed;
 <head>
 <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Reach The Box [Game]</title>
+        <title>Reach The Line [Game]</title>
         <style>
         @media screen and (max-width:800px){
             body {
