--- a/index.html
+++ b/index.html
@@ -26,14 +26,13 @@ position:fixed;
         @media screen and (max-width:800px){
             body {
     user-select:none;
-    width:max(180%,1600px);
 }
 #cvx{
     background:rgb(255,455,150);
     left:0.0%;top:0.0%;position:fixed ;
 }
 #btn1, #btn2, #btn3 {
-    width:30%;height:15%;
+    width:0 auto;height:0 auto;
     background:#00FFFF;
     padding:3%;border-radius:0px 100px 100px 0px;				
     z-index:100; border-style:none;
