--- a/index.html
+++ b/index.html
@@ -1,1 +1,243 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+			<title>🏓 Ping Pong 🏓[Game]</title>
+			<script src="bounci.js"></script>
+			<style>						
+						#cvx{left:0.0%;top:0.0%;position:fixed;
+						background:black; user-select:none;
+						}
+						#plyr, #plyr1{width:15vw;height:15vw;opacity:0.8;color:black; background:radial-gradient(white,grey);
+						border-style:none;z-index:1000;
+						position:fixed;margin-left:15vw;
+						margin-top:5vw;
+						font-weight:bold;}
+						#plyr{
+						margin-left:65vw;
+						}
+						.sup{
+						font-size:4.5vw;
+						margin-left:1.1vw;
+						}
+						.su{
+						margin-left:1.1vw;
+						font-size:4.5vw;
+					  }
+					  #scorP, #scorA{
+					  font-size:6.5vw;
+					  text-align:center;
+					  margin-top:-0.8vw;
+					  }
+					  #btn1{
+	font-size:5vw;font-family:fantasy;
+	width:17vw;height:6vw; padding:1vw;
+	position:fixed;border-style:ridge;
+	background:radial-gradient(white,grey);z-index:0;
+	font-weight:bold;border-color:#00ff00;
+	margin-top:81vw;margin-left:39.5vw;
+	border-width:1vw;border-radius:3vw;
+	}
+					  #replay{
+	width:70vw;height:35vw;background:black;
+	border-style:ridge;border-radius:5vw;
+	border-color:#00ff00;margin-left:11.5vw;
+	border-width:2vw;margin-top:48vw;
+	
+	z-index:0;position:fixed;
+color:white;font-size:5.7vw;font-family:serif;
+	font-weight:bold;
+	}
+	#text{
+	margin-left:6vw;
+	}
+	#score{
+	margin-left:6vw;
+	}
+	#info{
+	font-size:6vw;font-family:fantasy;
+	color:gold;z-index:1000; position:fixed;
+	font-weight:bold;margin-left:5vw;
+	margin-top:20vw;
+	}
+	#br{
+	margin-left:8vw;
+	}			
+						
+			</style>
+</head>
+<body>
+			<div id="replay">
+			<br />
+     <div id="text">Replay the Game:(</div><br />
+			<div id="score">Score:</div>
+			</div>
+			<div id="btn1">Replay</div>
+			<div id="plyr"><sup class="su">Score:</sup>
+			<div id="scorP">0</div>
+			</div>
+			<div id="plyr1"><sup class="sup">Score:</sup>
+			<div id="scorA">0</div>
+			</div>
+			<canvas id="cvx"></canvas>
+<script>
+window.onload= () =>{
+var cvx = document.getElementById('cvx');
+cvx.height = innerHeight;
+cvx.width = innerWidth;
+var ctx = cvx.getContext('2d');
+var scorP = document.querySelector('#scorP');
+var scorA = document.querySelector('#scorA');
+var btn1 = document.querySelector("#btn1");
+var replay = document.querySelector("#replay");
+var sco = document.querySelector("#score");
+var txt = document.querySelector("#text");
+var score = 0;
+var scoree = 0;
+class Rect{
+constructor(x,y,w,h,c,v){
+			this.x = x;
+			this.y = y;
+			this.w = w;
+			this.h = h;
+			this.c = c;
+			this.v = v;
+}
+draw(){
+			ctx.beginPath()
+			ctx.rect(this.x,this.y,this.w,this.h);
+			ctx.fillStyle = this.c;
+			ctx.fill()
+}
+update(){
+			this.draw()
+			this.x = this.x + this.v.x;
+			this.y = this.y + this.v.y;
+}
+}
+class Circle{
+constructor(x,y,r,c,v){
+	 	this.x = x;
+   this.y = y;
+   this.r = r;
+   this.c = c;
+   this.v = v;
+}
+draw(){
+			ctx.beginPath()
+			ctx.arc(this.x,this.y,this.r,0,2*Math.PI)
+			ctx.fillStyle = this.c;
+			ctx.fill()
+}
+update(){
+			this.x = this.x + this.v.x
+			this.y = this.y + this.v.y
+}
+}
+var circle1 = new Circle(180,50,15,"white",{
+			x:2,
+			y:2
+})
+var rect1 = new Rect(15,50,10,80,"rgb(155,25,155)",{
+			x:0,
+			y:0
+});
+var rect2 = new Rect(cvx.width - 25,50,10,80,"rgb(155,25,155)",{
+			x:0,
+			y:1
+});
+function animate() {
+ctx.clearRect(0,0, innerWidth, innerHeight)
+			rect1.draw()
+			rect1.update()
+			rect2.draw()
+			rect2.update()
+			circle1.draw()
+			circle1.update()
+			circle1.y = rect2.y + 40;
+			ctx.setLineDash([13, 5]);/*dashes are 5px and spaces are 3px*/
+ctx.beginPath();
+ctx.moveTo(cvx.width/2,0);
+ctx.lineTo(cvx.width/2, cvx.height);
+ctx.strokeStyle = 'white';
+ctx.stroke();
+			if(rect2.y > cvx.height - 80){
+						rect2.v.y -= 1;
+			}
+			if(rect2.y < 0){
+						rect2.v.y += 1;
+			}
+			if(rect1.y > cvx.height - 80){
+						rect1.y -= 5;
+			}
+			if(rect1.y < 0){
+						rect1.y += 5;
+			}
+			if(circle1.y > cvx.height - 15){
+						circle1.y = cvx.height/2;
+			}
+			if(circle1.y < 0){
+						circle1.v.y += 1;
+			}
+			if(circle1.x > cvx.width - 15){
+						circle1.x = 60
+						scoree += 1;
+			   scorA.innerHTML = scoree;
+			}
+			if(circle1.x < 0){
+					circle1.x = 260;
+					score += 1;
+			   scorP.innerHTML = score;
+			}
+			if(circle1.x - rect2.w < rect2.x && circle1.x + rect2.w > rect2.x 
+&&circle1.y - rect2.h < rect2.y && circle1.y + rect2.h> rect2.y){
+			circle1.v.x -= 9;
+}
+if(circle1.x - rect1.w < rect1.x && circle1.x + rect1.w > rect1.x 
+&&circle1.y - rect1.h   < rect1.y && circle1.y + rect1.h - 80 > rect1.y) {
+			circle1.v.x += 9;
+			}
+			if(score >= 5){
+	  		score = 5;
+	  		scorP.innerHTML = score;
+				btn1.style.zIndex = "1000";
+				replay.style.zIndex = "1000";
+				txt.innerHTML = "You Lose";
+				sco.innerHTML = "Score:"+scoree;		
+				cvx.style.filter = "blur(30px)";
+			}
+			if(scoree >= 5){
+		  	scoree = 5;
+		  	scorA.innerHTML = scoree;
+		  	btn1.style.zIndex = "1000";
+				replay.style.zIndex = "1000";
+				txt.innerHTML = "You Win";
+				sco.innerHTML = "Score:"+scoree;
+				cvx.style.filter = "blur(30px)";
+			}
+addEventListener('touchstart',set);
+addEventListener('touchmove',set);
+function set(e){
+			rect1.y = e.touches[0].clientY;
+}
+btn1.addEventListener('touchstart',repet);
+function repet() {
+				ctx.clearRect(0,0,cvx.width,cvx.height);
+				btn1.style.zIndex = "0";
+				replay.style.zIndex = "0";
+				cvx.style.filter = "blur(0px)";
+				score = 0;
+				scoree = 0;
+				scorA.innerHTML = scoree;
+      scorP.innerHTML = score;
+      cvx.style.filter = "blur(0px)";
+}
+}
+
+ var t = setInterval(animate,1000/60)
+}
+
+
+</script>
+</body>
+</html>
