--- a/index.html
+++ b/index.html
@@ -180,12 +180,12 @@ ctx.stroke();
 						circle1.v.y += 1;
 			}
 			if(circle1.x > cvx.width - 15){
-						circle1.x = 60
+						circle1.x = cvx.width/2 - 230;
 						scoree += 1;
 			   scorA.innerHTML = scoree;
 			}
 			if(circle1.x < 0){
-					circle1.x = 260;
+					circle1.x = cvx.width/2 + 230;
 					score += 1;
 			   scorP.innerHTML = score;
 			}
