--- a/index.html
+++ b/index.html
@@ -329,6 +329,7 @@ btn1.addEventListener('touchstart',repet);
 }
  setInterval(animate, 1000/60);            
 }
+alert("Touch at bottom of screen to increase the speed of bullet");
             </script>
 </body>
 </html>
