--- a/index.html
+++ b/index.html
@@ -329,7 +329,9 @@ btn1.addEventListener('touchstart',repet);
 }
  setInterval(animate, 1000/60);            
 }
-alert("Touch at bottom of screen to increase the speed of bullet");
+alert(`Touch at bottom of screen to increase the speed of bullet:
+•Hit the other boxes except Red box.
+•Red box will decrease your score:)`);
             </script>
 </body>
 </html>
