--- a/index.html
+++ b/index.html
@@ -805,7 +805,16 @@ function resizeCanvas(){
     cvx.width = window.innerWidth;
     cvx.height = window.innerHeight;
 }
-
+{
+"theme_color" : "#f69435"
+"background_color" : "#f69435"
+"display" : "browser"
+"scope" : "/"
+"start_url" : "/tejdev-tech.github.io"
+"name" : "Canvas Drawing"
+"description" : "A simple drawing app. "
+"short_name" : "Draw Yourself"
+}
 
 function Loadering(){
 const loader = document.querySelector("#loader");
