--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@ function resizeCanvas(){
     cvx.width = window.innerWidth;
     cvx.height = window.innerHeight;
 }
-{
+/*{
 "theme_color" : "#f69435"
 "background_color" : "#f69435"
 "display" : "browser"
@@ -815,14 +815,15 @@ function resizeCanvas(){
 "description" : "A simple drawing app. "
 "short_name" : "Draw Yourself"
 }
-
-function Loadering(){
+*/
+/*function Loadering(){
 const loader = document.querySelector("#loader");
 loader.style.display = "none";
 drawYourSelf.style.display = "block";
 drawAble = true;
 }
 setTimeout(Loadering,800);
+*/
 
 }
 
