--- a/index.html
+++ b/index.html
@@ -816,14 +816,14 @@ function resizeCanvas(){
 "short_name" : "Draw Yourself"
 }
 */
-/*function Loadering(){
+function Loadering(){
 const loader = document.querySelector("#loader");
 loader.style.display = "none";
 drawYourSelf.style.display = "block";
 drawAble = true;
 }
 setTimeout(Loadering,800);
-*/
+
 
 }
 
