--- a/index.html
+++ b/index.html
@@ -442,10 +442,10 @@ top:73vh;left:33vw;
 </script>
 </head>
 <body>
-<div id="loader">
+<!--<div id="loader">
 <div id="lTxt">Canvas 🖌️</div>
 <div id="load"></div>
-</div>
+</div>-->
 <div id="drawYourSelf">
             <canvas id="cvx"></canvas>
             <script src="draw.js"></script> 
