--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>Monetization</title>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1942554714489658"
+     crossorigin="anonymous"></script>
     </head>
     <body>
         <H1>Hello World</H1>
