--- a/index.html
+++ b/index.html
@@ -7,5 +7,18 @@
     </head>
     <body>
         <H1>Hello World</H1>
+        <div>Ad <br /> <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1942554714489658"
+     crossorigin="anonymous"></script>
+<!-- Interstitial ad -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1942554714489658"
+     data-ad-slot="1109069244"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
     </body>
 </html>
