--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <H1>Hello World</H1>
-        <div>Ad <br /> <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1942554714489658"
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1942554714489658"
      crossorigin="anonymous"></script>
 <!-- Interstitial ad -->
 <ins class="adsbygoogle"
@@ -17,6 +17,5 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-</div>
     </body>
 </html>
