--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Monetization</title>
     </head>
     <body>
-        <H1>Hello World</H1>
+        <H1>Hello World!</H1>
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1942554714489658"
      crossorigin="anonymous"></script>
 <!-- Interstitial ad -->
